# opencv_challenges

./: .gitignore  opencv_install.sh  opencv_install_raspberry_pi.sh  opencv_install_raspberry_pi_temp.sh
atv1/: CMakeLists.txt
atv1/src/: red_segmentation.cpp  vignette.cpp
atv2/: CMakeLists.txt
atv2/output/: placeholder
atv2/src/: haar_face_splitter.cpp
aula_2/: CMakeLists.txt
aula_2/src/: red_segmentation.cpp  vignette.cpp
aula_2/vignette/: CMakeCache.txt  Makefile  cmake_install.cmake  vignette
